fixed alignment

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -237,7 +237,7 @@ nav img{
     }
     
     nav img{
-        height: 90%;
+        height: 87%;
         position:absolute;
         text-align: center;
         right: 0px;
@@ -282,6 +282,7 @@ nav img{
         display: block;
     }
 
+  
  
 }
 
