--- a/assets/style/subfolder/contact.css
+++ b/assets/style/subfolder/contact.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     padding-top: 20px;
+    
 }
 section{
     background-image: linear-gradient(
@@ -17,7 +18,7 @@ section{
     position: relative;
     background-attachment: fixed; /* background scroll with the page*/
 
-    height: 85vh;
+    height: 100vh;
 }
 
 
@@ -297,7 +298,7 @@ p {
         position: relative;
         background-attachment: fixed; /* background scroll with the page*/
     
-        height: 85vh;
+        height: 100vh;
     }
     
     
@@ -308,7 +309,7 @@ p {
     
     .box{
         width:600px;
-        
+       
         background: transparent;
        
     }
